--- a/style.css
+++ b/style.css
@@ -81,7 +81,12 @@ h1 {
   transform: scale(1.2);
   filter: drop-shadow(0 0 10px #ffd700);
 }
-
+marquee
+{
+  font-size: 2.5rem;
+  color: #ff0000;
+  text-shadow: 2px 2px 8px #ff0000;
+}
 footer {
   margin-top: 50px;
   border-top: 2px solid #222;
