--- a/style.css
+++ b/style.css
@@ -19,18 +19,24 @@ header {
   border-bottom: 4px solid #e60000;
   padding: 30px 0;
 }
-nav b {
-  margin-left: 20.9rem;
-  text-decoration: none;
-  color: red;
-  font-weight: bold;
-  transition: color 0.3s ease;
- align-content: center;
-}
+ nav {
+    display: flex;
+    justify-content: center;
+    gap: 400px; /* Adjust this for more/less space */
+    background-color: #111;
+    padding: 15px;
+  }
 
-nav b:hover {
-  color: yellow;
-}
+  nav a {
+    color: white;
+    text-decoration: none;
+    font-weight: bold;
+    font-size: 18px;
+  }
+
+  nav a:hover {
+    color: #ff0000;
+  }
 .logo-area {
   display: flex;
   flex-direction: column;
